--- a/login.html
+++ b/login.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Sign-up</title>
+    <title>Login</title>
 </head>
 <body>
+  
     <div class="wrapper">
         <h1>Login</h1>
         <form action="#">
@@ -27,7 +28,7 @@
             </div>
             <button type="submit" class="btn">Login</button>
             <div class="register-link">
-                <p>Don't have an account? <a href="#">Register</a></p>
+                <p>Don't have an account? <a href="./sign-up.html">Sign-up</a></p>
             </div>
         </form>
     </div>
