adding index.html

--- a/sign-up.html
+++ b/sign-up.html
@@ -19,16 +19,20 @@
                 <input type="text" placeholder="Last Name" name="last_name" required id="last_name">
             </div>
             <div class="input-box">
+                <input type="text" placeholder="Username" name="username" required id="username">
+                
+            </div>
+            <div class="input-box">
                 <input type="password" placeholder="Password" name="password" required id="password">
             </div>
             <div class="input-box">
                 <input type="password" placeholder="Verify Password" name="verify_password" required id="verify_password">
             </div>
             <div class="input-box">
-                <input type="tel" placeholder="Phone number" name="phone" required id="phone">
+                <input type="tel" placeholder="Phone Number (e.g 0612457184)" name="phone" required id="phone">
             </div>
             
-            <button type="submit" class="btn">Submit <a href="./login.html"></a>
+            <button type="submit" class="btn">Submit <a href="./index.html"></a>
             </button>
             <div class="register-link">
                 <p>You have an account? <a href="./login.html">Login</a></p>
