--- a/sign-up.html
+++ b/sign-up.html
@@ -35,7 +35,7 @@
             <button type="submit" class="btn">Submit <a href="./index.html"></a>
             </button>
             <div class="register-link">
-                <p>You have an account? <a href="./login.html">Login</a></p>
+                <p>You have an account? <a href="./index.html">Login</a></p>
             </div>
             
         </form>
